chore(files): untrack unimportant files

--- a/.gitignore
+++ b/.gitignore
@@ -153,6 +153,7 @@ sysinfo.txt
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 ### VisualStudioCode ###
+.vscode/
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
